--- a/_layout/default.html
+++ b/_layout/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
-  </head>
+  <head>
     {% if jekyll.environment == 'production' %}
     {% include analytics.html %}
     {% endif %}
