--- a/_layout/default.html
+++ b/_layout/default.html
@@ -16,7 +16,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title }}</h1>
-      <h2 class="project-tagline">{{ site.description }}</h2>
+      <h2 class="project-tagline">{ }</h2>
     </header>
 
     <main id="content" class="main-content" role="main">
